bundled_metadata/force-app/main/default/objects/DataImportResult__e/DataImportResult__e.object-meta.xml
<CustomObject>
    <label>DataImportResult</label>
    <pluralLabel>DataImportResults</pluralLabel>
</CustomObject>