bundled_metadata/force-app/main/default/objects/DataImportResult__e/fields/FailedContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>FailedContentVersionId__c</fullName>
    <label>FailedContentVersionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>