bundled_metadata/force-app/main/default/objects/DataImportResult__e/fields/FailedCount__c.field-meta.xml
<CustomField>
    <fullName>FailedCount__c</fullName>
    <label>FailedCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>