bundled_metadata/force-app/main/default/objects/DataImportResult__e/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>JobId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>