bundled_metadata/force-app/main/default/objects/DataImportResult__e/fields/SuccessContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>SuccessContentVersionId__c</fullName>
    <label>SuccessContentVersionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>