bundled_metadata/force-app/main/default/objects/DataImportResult__e/fields/SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>SuccessCount__c</fullName>
    <label>SuccessCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>